Bug 789621 - getTextAttributes doesn't work with magic offsets. r=surkov